[gd_scene load_steps=27 format=3 uid="uid://7t7jfvndjwee"]

[ext_resource type="Texture2D" uid="uid://csflk0vvsi6o8" path="res://Assets/Monsters/Skeleton.png" id="1_eddxy"]
[ext_resource type="Script" path="res://Scripts/Monsters/skeleton.gd" id="1_t6yvj"]
[ext_resource type="Script" path="res://Scripts/flip_hit_box.gd" id="3_nuhnh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1jcg0"]
radius = 5.0

[sub_resource type="Animation" id="Animation_ei7lb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_hggwu"]
resource_name = "attack"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.4001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 12, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_reset_animation_flags"
}]
}

[sub_resource type="Animation" id="Animation_1u1gm"]
resource_name = "damage"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_reset_animation_flags"
}]
}

[sub_resource type="Animation" id="Animation_vg8nh"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.4001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 12, 4, 5]
}

[sub_resource type="Animation" id="Animation_q1e4x"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.4001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 12, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tovpy"]
_data = {
"RESET": SubResource("Animation_ei7lb"),
"attack": SubResource("Animation_hggwu"),
"damage": SubResource("Animation_1u1gm"),
"idle": SubResource("Animation_vg8nh"),
"walk": SubResource("Animation_q1e4x")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1fc3e"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rs52n"]
animation = &"damage"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sg8mi"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6dx5b"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8pm2u"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8oyu2"]
advance_mode = 2
advance_expression = "velocity.x != 0 or velocity.y != 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ucner"]
advance_mode = 2
advance_expression = "velocity.x == 0 and velocity.y == 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w53em"]
advance_mode = 2
advance_expression = "_is_attacking == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sdv3b"]
advance_mode = 2
advance_expression = "_is_attacking == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ow8pj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2mugu"]
advance_mode = 2
advance_expression = "_is_damaged == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rcxy4"]
advance_mode = 2
advance_expression = "_is_damaged == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8jpnp"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m27x5"]
switch_mode = 2
advance_mode = 2
advance_expression = "_is_damaged == true"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kxuoa"]
states/Start/position = Vector2(182, 100)
states/attack/node = SubResource("AnimationNodeAnimation_1fc3e")
states/attack/position = Vector2(453, 195)
states/damage/node = SubResource("AnimationNodeAnimation_rs52n")
states/damage/position = Vector2(453, -3)
states/idle/node = SubResource("AnimationNodeAnimation_sg8mi")
states/idle/position = Vector2(375, 100)
states/walk/node = SubResource("AnimationNodeAnimation_6dx5b")
states/walk/position = Vector2(535, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_8pm2u"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_8oyu2"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_ucner"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_w53em"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_sdv3b"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_ow8pj"), "idle", "damage", SubResource("AnimationNodeStateMachineTransition_2mugu"), "walk", "damage", SubResource("AnimationNodeStateMachineTransition_rcxy4"), "damage", "idle", SubResource("AnimationNodeStateMachineTransition_8jpnp"), "attack", "damage", SubResource("AnimationNodeStateMachineTransition_m27x5")]
graph_offset = Vector2(-45, -31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fchtm"]
size = Vector2(12, 12)

[node name="Skeleton" type="CharacterBody2D" groups=["ImmuneToPlayerAttack", "Monster"]]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_t6yvj")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_1jcg0")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_eddxy")
offset = Vector2(0, -24)
hframes = 6
vframes = 6
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_tovpy")
}

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource("AnimationNodeStateMachine_kxuoa")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../AnimationPlayer")

[node name="WeaponBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5
script = ExtResource("3_nuhnh")
x_position = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponBox"]
shape = SubResource("RectangleShape2D_fchtm")
debug_color = Color(0.777879, 0.352382, 0.675789, 0.42)

[node name="TrapTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TrapTimer" to="." method="_on_trap_timer_timeout"]
